[package]
name = "psp22"
version = "0.2.1"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP22"
repository = "https://github.com/Cardinal-Cryptography/PSP22"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP22 token standard in pure ink!"
exclude = [ ".github/*" ]

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
contract = []
ink-as-dependency = []
