[package]
name = "multi_sig"
version = "0.9.6"
authors = ["Yonatan Hornstein <yonatan@panoramaswap.com>"]
edition = "2021"
overflow-checks = false

[dependencies]
ink = { version = "~4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag="3.0.0", default-features= false, features = ["psp22"] }

[lib]
name = "multi_sig"
path = "lib.rs"
crate-type = [
    "cdylib",
    # Used for ABI. Required for contracts to be included in other contracts.
    "rlib",
]
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [

    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
psp22 = ["openbrush/psp22"]
ink-as-dependency = []