[package]
name = "pair_creator"
version = "0.8.0"
authors = ["Yonatan Hornstein <yonatan@panoramaswap.com>"]
edition = "2021"
overflow-checks = false

[dependencies]
# Import of all ink! crates
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }
ink_engine = { version = "~3.3.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

trading_pair_azero = { path = "../trading_pair_azero",version="0.8.0",default-features = false, features = ["ink-as-dependency"] }
trading_pair_psp22 = { path = "../trading_pair_psp22",version="0.8.0",default-features = false, features = ["ink-as-dependency"] }



[lib]
overflow-checks = false
name = "pair_creator"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib"
]
[profile.release]
overflow-checks = false


[features]
default = ["std"]
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",


  "trading_pair_azero/std",
    "trading_pair_psp22/std"
]
[workspace]
memebers =[
    "trading_pair_azero",
]
