[package]
name = "pair_creator"
version = "0.9.6"
authors = ["Yonatan Hornstein <yonatan@panoramaswap.com>"]
edition = "2021"
overflow-checks = false

[dependencies]
ink = { git = "https://github.com/paritytech/ink", commit = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", branch = "feature/update-to-ink-4.0.0-beta", default-features= false, features = ["psp22"] }
trading_pair_psp22 = { path = "../trading_pair_psp22",version="0.9.6",default-features = false, features = ["ink-as-dependency"] }
trading_pair_azero = { path = "../trading_pair_azero",version="0.9.6",default-features = false, features = ["ink-as-dependency"] }




[lib]
overflow-checks = false
name = "pair_creator"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib"
]
[profile.release]
overflow-checks = false


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "trading_pair_azero/std",
    "trading_pair_psp22/std"
]
psp22 = ["openbrush/psp22"]
ink-as-dependency = []

[workspace]
memebers =[
    "trading_pair_azero",
    "trading_pair_psp22"
]

