[package]
name = "trading_pair_psp22"
version = "3.0.0"
authors = ["Yonatan Hornstein Yonatanhornstein@gmail.com"]
edition = "2021"
overflow-checks = false

[dependencies]
# Import of all ink! crates
# Import of all ink! crates
ink_primitives = { version = "~3.2.0", default-features = false }
ink_metadata = { version = "~3.2.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.2.0", default-features = false }
ink_storage = { version = "~3.2.0", default-features = false }
ink_lang = { version = "~3.2.0", default-features = false }
ink_prelude = { version = "~3.2.0", default-features = false }
ink_engine = { version = "~3.2.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
openbrush = { version = "~2.0.0", default-features = false, features = ["psp22"] }








[lib]
overflow-checks = false
name = "trading_pair_psp22"
path = "lib.rs"
crate-type = [
    "cdylib",
    # Used for ABI. Required for contracts to be included in other contracts.
    "rlib",
]
[profile.release]
overflow-checks = false


[features]
default = ["std"]
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",

  # Brush dependency
  "openbrush/std"
]
ink-as-dependency = []